--- a/pages/about.css
+++ b/pages/about.css
@@ -381,6 +381,9 @@ body{
 	font-size:3vh;
 	font-weight:700;
 }
+#img{
+	max-width:100%;
+}
 
 /**************************************************************************************************************/
 
