--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@ body{
 	color: white;
 	text-align:center;
 	width:100%;
-	font-size: 10vh;
+	font-size: 12vh;
 	font-weight: 700;
 	overflow: hidden;
 	font-family:"SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
@@ -94,8 +94,8 @@ body{
 	color:black;	
 	border-radius:2vw;
 	margin:auto;
-	margin: 0vw 1vw;
-	margin: 0.5vw;
+	margin: 2vh 1vh;
+	
 }
 #bored{
 	color:black;
@@ -143,6 +143,7 @@ body{
 	height:75vh;
 	width:90%;
 	margin: auto;
+	
 }
 
 #justscroll{
@@ -153,6 +154,7 @@ body{
 	margin:0vw 1vw;
 	border-radius:2vw;
 	margin:0.5vw;
+	margin-bottom:2vh;
 }
 #kil{
 	margin: auto;
@@ -182,6 +184,7 @@ body{
 	margin:0vw 1vw;
 	border-radius:2vw;
 	margin:0.5vw;
+	margin-bottom:2vh;
 }
 #oh{
 	color:black;
@@ -208,6 +211,7 @@ body{
 	border-radius:2vw;
 	border:0.5px solid #006568;
 	margin:0vw 0.5vw;
+	margin-bottom:2vh;
 }
 #education h3{
 	color: white;
@@ -250,6 +254,8 @@ body{
 	margin:0vw 0.5vw;
 	margin:0.5vw;
 	text-align:center;
+	padding-bottom:1.2vh;
+	margin-bottom:2vh;
 }
 #reach{
 	margin:auto;
@@ -273,6 +279,8 @@ body{
 	margin:0vw 0.5vw;
 	margin:0.5vw;
 	border:1px solid #007C74;
+	padding-bottom:1.2vh;
+	margin-bottom:2vh;
 }
 
 #work{
@@ -315,6 +323,7 @@ body{
 	margin:0.5vw;
 	text-align:center;
 	padding-bottom:1vh;
+	margin-bottom:2vh;
 }
 #exp{
 	margin:auto;
@@ -338,6 +347,7 @@ body{
 	margin:0.5vw;
 	text-align:center;
 	padding-bottom:1vh;
+	margin-bottom:2vh;
 }
 #skl{
 	margin:auto;
