--- a/main.css
+++ b/main.css
@@ -213,7 +213,7 @@ body{
 	margin:0vw 0.5vw;
 	margin-bottom:2vh;
 }
-#education h3{
+#now{
 	color: white;
 	text-align:center ;
 	font-size: 3vh;
@@ -226,7 +226,7 @@ body{
 #leap{
 	color:white;
 	text-align:center ;
-	padding:0vw 1vw;
+	padding:0vw 0.2vw;
 	font-size: 6vh;
 	font-weight: 700;
 	overflow: hidden;
