--- a/main.css
+++ b/main.css
@@ -170,7 +170,7 @@ body{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 	font-size:16vh;
-	padding:3vw;
+	padding:0vw 3vw;
 	font-weight:700;
 	font-family:'Square Peg', cursive;
 }
@@ -185,10 +185,10 @@ body{
 	border-radius:2vw;
 	margin:0.5vw;
 	margin-bottom:2vh;
+	min-height:70vh;
 }
 #oh{
 	color:black;
-	padding-bottom:35%;
 	text-align:center;
 	font-size:5.2vh;
 	font-weight:750;
